[tool.poetry]
name = "robot_sim"
version = "0.1.0"
description = "A simulator for robot dynamics, controls, estimation, and planning"
authors = ["Rockey Hester <rockeyhesterv@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
